# CAS-AML-final-public

./: .env  .gitignore  01_get_email_content.py  02_prepare_email_gpt.py  03_openai_embeddings_chromadb.py  04_query.py  04a_query_multiretriver.py  README.md  conda-lock.yml  dirs.txt  environment.yml  launch.json  pyproject.toml  tree.txt
Streamlit/: home.py
Streamlit/pages/: 01_Outlook.py
archiv/: 01_get_email_content_RAY.py  01_get_email_content_multi.py  02_prepare_email.py  03_openai_embeddings_langchain.py
notebooks/: chroma.ipynb  embedding.ipynb  falcon_tesd.ipynb  get_emails.ipynb  ingest_notebook.ipynb  langchain_module.py  prepare_email_content copy.ipynb  prepare_email_content.ipynb  prepare_email_content_for_finetuning.ipynb  queries.ipynb
scripts/: 01_get_email_content.py  README.md
