[tool.poetry]
name = "cas"
version = "0.1.0"
description = "environment for CAS project"
authors = ["johannesmichael <jroempp@ambergloglay.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
torch = "2.0.1"
conda-lock = "^2.1.1"
langchain = "0.0.234"
chromadb = "0.3.29"
redis = {version = "4.6.0", extras = ["hiredis"]}
transformers = "4.30.0"
sentence-transformers = "2.2.2"
unstructured = "0.8.1"
tiktoken = "0.4.0"
pymupdf = "1.22.5"
pandas="2.0.3"
azure-storage-blob="12.17.0"
azure-data-tables="12.4.2"
pyarrow="12.0.1"
msal="1.22.0"
tqdm="4.65.0"
requests="2.31.0"
urllib3="1.26.16"
tabulate="0.9.0"
openai="0.27.8"
python-dotenv="1.0.0"
html2text = "^2020.1.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
